--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                         <img src="img/salmar.png" alt="">
                         <div class="blog-text">
                             <h4>
-                                Salmas AS
+                                Salmar AS
                             </h4>
                             <p>
                                 Fröya, Norway
