--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <meta name="google-site-verification" content="X73pKd22sUMAi-ti_wOb3d_HwjY92Vx-km-NPkTQUqc" />
 </head>
 <body class="main-content">
     <header class="container header active" id="home">
