--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Friends List 1</h3>
+                        <h3>Friends List I and II</h3>
                         <div class="icons">
                             <a href="https://github.com/jkiimala/kaverilista.git" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
