--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     <div class="hover-items">
                         <h3>Python Game - coming soon</h3>
                         <div class="icons">
-                            <a href="#" target="_blank" class="icon">
+                            <a href="https://github.com/jkiimala/laivanupotuspeli.git" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
