--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Python Game - coming soon</h3>
+                        <h3>Python Game</h3>
                         <div class="icons">
                             <a href="https://github.com/jkiimala/laivanupotuspeli.git" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
