--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Friends List I and II</h3>
+                        <h3>Friends List I</h3>
                         <div class="icons">
-                            <a href="https://github.com/jkiimala/kaverilista.git" target="_blank" class="icon">
+                            <a href="https://raw.githack.com/jkiimala/kaverilista1/gh-pages/kaverilista1.html" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
