--- a/index.html
+++ b/index.html
@@ -315,6 +315,21 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
+                        <img src="img/friends2.png" alt="">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>Friends List II</h3>
+                        <div class="icons">
+                            <a href="https://raw.githack.com/jkiimala/kaverilista1/gh-pages/kaverilista2.html" target="_blank" class="icon">
+                                <i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    
+                    <div class="image">
                         <img src="img/friends.png" alt="">
 
                     </div>
