--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/friends.png" alt="">
+                        <img src="img/friends1.png" alt="">
 
                     </div>
                     <div class="hover-items">
