--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <p class="tl-duration">2018</p>
                     <h5>3D Modeling Online Course<span> - The Finnish Institute for Enterprise Management</span></h5>
                     <p>
-                        Design & Product Development - 3D models and 2D drawings of complex parts and assemblies
+                        Design & Product Development | 3D models and 2D drawings of complex parts and assemblies
                         utilizing SolidWorks & Autodesk Inventor Pro
                     </p>
                 </div>
@@ -378,9 +378,9 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Temperature Converter - soon..</h3>
+                        <h3>Temperature Converter</h3>
                         <div class="icons">
-                            <a href="#" target="_blank" class="icon">
+                            <a href="https://raw.githack.com/jkiimala/temperatureconverter/gh-pages/lampotilamuunnin.html" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -578,7 +578,7 @@
                 </div>
 
                 <p class="port-text">
-                    Here are some of the Businesses I have worked for in the past.
+                    Here are some of the Businesses I have worked for in the past. I am currently seeking employment.
                 </p>
 
                 <div class="blogs">
