--- a/index.html
+++ b/index.html
@@ -283,9 +283,22 @@
                     <h5>3D Modeling Online Course<span> - The Finnish Institute for Enterprise Management</span></h5>
                     <p>
                         Design & Product Development | 3D models and 2D drawings of complex parts and assemblies
-                        utilizing SolidWorks & Autodesk Inventor Pro
+                        utilizing SolidWorks & Autodesk Inventor Pro.
                     </p>
                 </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2017</p>
+                    <h5>Further Technical Education to Highly Qualified<span> - Lappia-Education Ltd</span></h5>
+                    <p>
+                        Continuing professional technical education to highly qualified individuals tailored
+                        to meet the needs of the Swedish and Norwegian labor markets
+                    </p>
+                </div>
+
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
