--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jarno Kiimala - Digital Designer | Software Developer | Industrial Management Engineer | 3D Modeler</title>
+    <title>Jarno Kiimala - Digital Designer | Software Developer | Industrial Management Engineer</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero.png" alt="">
+                    <img src="img/hero.png" alt="Jarno Kiimala">
                 </div>
             </div>
             <div class="right-header">
@@ -591,7 +591,7 @@
                 </div>
 
                 <p class="port-text">
-                    Here are some of the Businesses I have worked for in the past. I am currently seeking employment.
+                    Here are some of the Businesses and Co-Operators I have worked for in the past. I am currently seeking employment.
                 </p>
 
                 <div class="blogs">
@@ -635,10 +635,47 @@
                                 Houlihan´s Wisconsin-Dells
                             </h4>
                             <p>
-                                Wisconsin, U.S.A.
+                                Wisconsin-Dells, WI, U.S.A.
                             </p>
                         </div>
                     </div>
+
+                    <div class="blog">
+                        <img src="img/unnajunna.png" alt="">
+                        <div class="blog-text">
+                            <h4>
+                                Unna Junná | TV | Areena | yle.fi
+                            </h4>
+                            <p>
+                                Inari, Finland
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/yle.png" alt="">
+                        <div class="blog-text">
+                            <h4>
+                                Yle Sápmi
+                            </h4>
+                            <p>
+                                Inari, Finland
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/utbnord.png" alt="">
+                        <div class="blog-text">
+                            <h4>
+                                Utbildning Nord
+                            </h4>
+                            <p>
+                                Övertorneå, Sweden
+                            </p>
+                        </div>
+                    </div>
+
                     <div class="blog">
                         <img src="img/salmar.png" alt="">
                         <div class="blog-text">
@@ -719,7 +756,7 @@
                         <div class="contact-icons">
                             
                             <div class="contact-icon">
-
+                                
                                 <a href="https://www.instagram.com" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
