--- a/index.html
+++ b/index.html
@@ -628,14 +628,15 @@
                             </p>
                         </div>
                     </div>
+                    
                     <div class="blog">
-                        <img src="img/blog3.png" alt="">
+                        <img src="img/skabmagovat.png" alt="">
                         <div class="blog-text">
                             <h4>
-                                Houlihan´s Wisconsin-Dells
+                                <a href="https://skabmagovat.fi/fi/">Skábmagovat Indigenous Film Festival</a>
                             </h4>
                             <p>
-                                Wisconsin-Dells, WI, U.S.A.
+                                Aanaar - Inari, Finland
                             </p>
                         </div>
                     </div>
@@ -647,7 +648,7 @@
                                 Unna Junná | TV | Areena | yle.fi
                             </h4>
                             <p>
-                                Inari, Finland
+                                Aanaar - Inari, Finland
                             </p>
                         </div>
                     </div>
@@ -660,6 +661,18 @@
                             </h4>
                             <p>
                                 Inari, Finland
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/blog3.png" alt="">
+                        <div class="blog-text">
+                            <h4>
+                                Houlihan´s Wisconsin-Dells
+                            </h4>
+                            <p>
+                                Wisconsin-Dells, WI, U.S.A.
                             </p>
                         </div>
                     </div>
