--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                                 Unna Junná | TV | Areena | yle.fi
                             </h4>
                             <p>
-                                Aanaar - Inari, Finland
+                                Inari, Finland
                             </p>
                         </div>
                     </div>
