--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">javascript</p>
                         <div class="progress-con">
-                            <p class="prog-text">35%</p>
+                            <p class="prog-text">40%</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
@@ -591,15 +591,16 @@
                 </div>
 
                 <p class="port-text">
-                    Here are some of the Businesses and Co-Operators I have worked for in the past. I am currently seeking employment.
+                    Here are some of the Businesses and Organizations I have worked and collaborated with in the past. I am currently seeking employment.
                 </p>
 
                 <div class="blogs">
                     <div class="blog">
-                        <img src="img/port6.png" alt="">
+                        <a href="https://www.ge.com/" target="_blank">
+                        <img src="img/ge.png" alt=""></a>
                         <div class="blog-text">
                             <h4>
-                                LNP Engineering Plastics Europe B.V.
+                                GE - LNP Engineering Plastics Europe B.V.
                             </h4>
                             <p>
                                 Raamsdonksveer, The Netherlands
@@ -607,7 +608,8 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/blog1.png" alt="">
+                        <a href="https://www.acer.com/corporate/en" target="_blank">
+                        <img src="img/blog1.png" alt=""></a>
                         <div class="blog-text">
                             <h4>
                                 IMS Acer
@@ -618,7 +620,8 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/nokia.png" alt="">
+                        <a href="https://www.nokia.com/fi_fi/" target="_blank">
+                        <img src="img/nokia.png" alt=""></a>
                         <div class="blog-text">
                             <h4>
                                 NOKIA
@@ -630,10 +633,11 @@
                     </div>
                     
                     <div class="blog">
-                        <img src="img/skabmagovat.png" alt="">
+                        <a href="https://skabmagovat.fi/fi/" target="_blank">
+                        <img src="img/skabmagovat.png" alt=""></a>
                         <div class="blog-text">
                             <h4>
-                                <a href="https://skabmagovat.fi/fi/">Skábmagovat Indigenous Film Festival</a>
+                                <a>Skábmagovat Indigenous Film Festival</a>
                             </h4>
                             <p>
                                 Aanaar - Inari, Finland
@@ -642,7 +646,8 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/unnajunna.png" alt="">
+                        <a href="https://areena.yle.fi/1-3430621" target="_blank">
+                        <img src="img/unnajunna.png" alt=""></a>
                         <div class="blog-text">
                             <h4>
                                 Unna Junná | TV | Areena | yle.fi
@@ -654,7 +659,8 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/yle.png" alt="">
+                        <a href="https://yle.fi/aihe/t/18-250470" target="_blank">
+                        <img src="img/yle.png" alt=""></a>
                         <div class="blog-text">
                             <h4>
                                 Yle Sápmi
@@ -666,13 +672,27 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/blog3.png" alt="">
+                        <a href="https://www.houlihans.com/" target="_blank">
+                        <img src="img/houlihans.png" alt=""></a>
                         <div class="blog-text">
                             <h4>
                                 Houlihan´s Wisconsin-Dells
                             </h4>
                             <p>
                                 Wisconsin-Dells, WI, U.S.A.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <a href="https://hotellinuuksio.fi/" target="_blank">
+                        <img src="img/nuuksio.png" alt=""></a>
+                        <div class="blog-text">
+                            <h4>
+                                Hotel Nuuksio
+                            </h4>
+                            <p>
+                                Espoo, Finland
                             </p>
                         </div>
                     </div>
