--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero.png" alt="Jarno Kiimala">
+                    <img src="img/hero2.png" alt="Jarno Kiimala">
                 </div>
             </div>
             <div class="right-header">
@@ -317,7 +317,7 @@
                 <h2>My <span>Projects</span><span class="bg-text">Projects</span></h2>
             </div>
             <p class="port-text">
-                Here are some of the projects that I have worked on over the years.
+                Some of the projects that I have worked on over the years.
             </p>
 
             
@@ -591,7 +591,7 @@
                 </div>
 
                 <p class="port-text">
-                    Here are some of the Businesses and Organizations I have worked and collaborated with in the past. I am currently seeking employment.
+                    Businesses and Organizations I have worked and collaborated with in the past. I am currently seeking employment.
                 </p>
 
                 <div class="blogs">
@@ -710,18 +710,20 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/salmar.png" alt="">
+                        <a href="https://www.salmar.no/en/front-page/" target="_blank">
+                        <img src="img/salmar.png" alt=""></a>
                         <div class="blog-text">
                             <h4>
-                                Salmar AS
+                                Salmar ASA
                             </h4>
                             <p>
-                                Fröya, Norway
+                                Frøya, Norway
                             </p>
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/portt3.png" alt="">
+                        <a href="https://taljetradgardsprodukter.se/" target="_blank">
+                        <img src="img/portt3.png" alt=""></a>
                         <div class="blog-text">
                             <h4>
                                 Tälje Trädgårdsprodukter AB
@@ -744,7 +746,7 @@
                         <h4>Get Connected!</h4>
                         <p>
                             Here you can find my contact information and social media links.
-                            Add me on LinkedIn and follow me on Instagram (coming soon). References available upon request.<br><br>
+                            Add me on LinkedIn and follow me on Instagram (coming soon). References available upon request. Hope to hear from you ASAP.<br><br>
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
