--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Registration Form - coming soon..</h3>
+                        <h3>Registration Form</h3>
                         <div class="icons">
-                            <a href="#" target="_blank" class="icon">
+                            <a href="https://raw.githack.com/jkiimala/regform/gh-pages/registration.html" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -738,7 +738,7 @@
                         <p>
                             I am currently seeking employment. Send me a connection request on LinkedIn so we can start collaboration.<br>
 
-                            Hope to hear from you soon!
+                            Hope to hear from you soon!<br>
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
