--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Web Designer, Front-End, Knowledge Management, Engineer">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Python, Bootstrap, ohjelmointi, software developer, devaaja, insinööri">
+    <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jarno Kiimala - Digital Designer | Software Developer | Industrial Management Engineer</title>
     <link rel="stylesheet" href="styles/styles.css">
@@ -26,7 +29,7 @@
                     Hi, I'm <span>Jarno Kiimala.</span></h1><br>
                     
                     <span class="wrap"></span>
-                    <h2>&nbsp; &nbsp;<a href="" class="typewrite" data-period="2000" data-type='[ "I am Creative...", "I am innovative...", "I Love Digital Media...", "and Web Design." ]'>
+                    <h2>&nbsp; &nbsp;<a href="" class="typewrite" data-period="2000" data-type='[ "I am Creative...", "I am Innovative...", "I Love Digital Media...", "and Web Design." ]'>
                           
                         </a>
                     </h2>
