--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Hi, I'm <span>Jarno Kiimala.</span></h1><br>
                     
                     <span class="wrap"></span>
-                    <h2>&nbsp; &nbsp;<a href="" class="typewrite" data-period="2000" data-type='[ "I am Creative...", "I am Innovative...", "I Love Digital Media...", "and Web Design." ]'>
+                    <h2>&nbsp; &nbsp;<a href="#" class="typewrite" data-period="2000" data-type='[ "I am Creative...", "I am Innovative...", "I Love Digital Media...", "and Web Design." ]'>
                           
                         </a>
                     </h2>
@@ -739,8 +739,8 @@
                     <div class="left-contact">
                         <h4>Get Connected!</h4>
                         <p>
-                            I am currently seeking employment. Send me a connection request on LinkedIn so we can start collaboration.<br>
-
+                            <p style="color:var(--color-secondary)">I am currently seeking employment.</p> Send me a connection request on LinkedIn so we can start collaborating.
+                            I am willing to relocate.
                             Hope to hear from you soon!<br>
                         </p>
                         <div class="contact-info">
@@ -750,7 +750,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Finland
+                                    Tornio, Finland
                                 </p>
                             </div>
                             <div class="contact-item">
