--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2023</p>
-                    <h5>Python Coding<span> - University of Helsinki</span></h5>
+                    <h5>Python Coding<span> - Uni Helsinki</span></h5>
                     <img src="img/unihki.png" alt="University of Helsinki">
                     <p>
                         Introduction to Programming course | Advanced Course
