--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2004 - 2006</p>
-                    <h5>Undergaduate Studies<span> - University of Eastern Finland (UEF)</span></h5>
+                    <h5>Undergaduate Studies in Physics<span> - University of Eastern Finland (UEF)</span></h5>
                     <img src="img/uef.png" alt="University of Eastern Finland (UEF)">
                     <p>
                         The Department of Technical Physics
