--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/regi.png" alt="">
+                        <img src="img/regi.png" alt="registration form">
 
                     </div>
                     <div class="hover-items">
                         <h3>Registration Form</h3>
                         <div class="icons">
-                            <a href="https://raw.githack.com/jkiimala/regform/gh-pages/registration.html" target="_blank" class="icon">
+                            <a href="https://raw.githack.com/jkiimala/registrationform/gh-pages/registration.html" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -404,7 +404,7 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/temperature.png" alt="">
+                        <img src="img/temperature.png" alt="temperature converter">
 
                     </div>
                     <div class="hover-items">
