--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Web Designer, Front-End, Knowledge Management, Engineer">
-    <meta name="keywords" content="HTML, CSS, JavaScript, Python, Bootstrap, ohjelmointi, software developer, devaaja, insinööri">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Python, Bootstrap 5, ohjelmointi, software developer, devaaja, koodari, insinööri, tuotantotalous">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jarno Kiimala - Digital Designer | Software Developer | Industrial Management Engineer</title>
+    <title>Jarno Kiimala - Software Developer | Industrial Management Engineer</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -272,7 +272,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2021</p>
-                    <h5>My Cashflow e-Commerce<span> - Faktia Ltd</span></h5>
+                    <h5>My Cashflow e-Commerce Web Design<span> - Faktia Ltd</span></h5>
                     <img src="img/faktia.png" alt="Faktia Ltd">
                     <p>
                         MyCashflow e-Commerce Web Design, SEO and Administration
@@ -322,7 +322,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2004 - 2006</p>
-                    <h5>Undergaduate Studies in Physics<span> - University of Eastern Finland (UEF)</span></h5>
+                    <h5>Undergaduate Studies in Applied Physics<span> - University of Eastern Finland (UEF)</span></h5>
                     <img src="img/uef.png" alt="University of Eastern Finland (UEF)">
                     <p>
                         The Department of Technical Physics
