--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero2.png" alt="Jarno Kiimala">
+                    <img src="img/jarnokiimala.png" alt="Jarno Kiimala">
                 </div>
             </div>
             <div class="right-header">
@@ -142,7 +142,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">Bootstrap 5</p>
                         <div class="progress-con">
-                            <p class="prog-text">85%</p>
+                            <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="react"></span>
                             </div>
