--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Slot Machine - coming soon..</h3>
+                        <h3>Slot Machine - TBA</h3>
                         <div class="icons">
                             <a href="#" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
@@ -365,7 +365,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Dice Roll Game - coming soon..</h3>
+                        <h3>Dice Roll Game - TBA</h3>
                         <div class="icons">
                             <a href="#" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
@@ -380,7 +380,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Clicker Game - coming soon..</h3>
+                        <h3>Clicker Game - TBA</h3>
                         <div class="icons">
                             <a href="#" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
