--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     with operational efficiency, sustainability and corporate responsibility in mind.
                     <p>
                     I have a strong foundation in Adobe CC Software and Graphic Design
-                    and I am a self-taught After Effects 2D animator.
-                    My recent accomplishments are Python coding, Bootstrap 5 and Knowledge Management.</p>
+                    and I am a self-taught After Effects 2D animator. At the moment I am designing Browser Games.
+                    My recent accomplishments are Python coding, JavaScript, Bootstrap 5 and Knowledge Management.</p>
                     
                     <!--
                     <div class="btn-con">
@@ -380,9 +380,9 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Clicker Game - TBA</h3>
+                        <h3>Clicker Game</h3>
                         <div class="icons">
-                            <a href="#" target="_blank" class="icon">
+                            <a href="https://raw.githack.com/jkiimala/beerClicker/gh-pages/index.html" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -786,7 +786,7 @@
                         <img src="img/puijo.png" alt="">
                         <div class="blog-text">
                             <h4>
-                                Puijo restaurants
+                                Puijo Restaurants
                             </h4>
                             <p>
                                 Kuopio, Finland
