--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                     <div class="hover-items">
                         <h3>Clicker Game</h3>
                         <div class="icons">
-                            <a href="https://raw.githack.com/jkiimala/beerClicker/gh-pages/index.html" target="_blank" class="icon">
+                            <a href="https://jkiimala.github.io/beerClicker/" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -512,7 +512,7 @@
                         <h3>OFFLINE e-Commerce</h3>
                         <div class="icons">
                             
-                            <a href="https://support.mycashflow.com/fi" target="_blank" class="icon">
+                            <a href="#" target="_blank" class="icon">
                                 <i class="fab fa-google"></i>
                             </a>
                         </div>
