--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Dice Roll Game</h3>
+                        <h3>Pig Dice Game</h3>
                         <div class="icons">
-                            <a href="#" target="_blank" class="icon">
+                            <a href="https://jkiimala.github.io/sikanoppa/" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
