--- a/index.html
+++ b/index.html
@@ -346,13 +346,13 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/slot2.png" alt="">
+                        <img src="img/jackpot.png" alt="">
 
                     </div>
                     <div class="hover-items">
-                        <h3>Slot Machine - TBA</h3>
+                        <h3>Slot Machine</h3>
                         <div class="icons">
-                            <a href="#" target="_blank" class="icon">
+                            <a href="https://jkiimala.github.io/captainJackpot" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
