--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">Always</p>
-                            <p class="small-text">Delighted Customers</p>
+                            <p class="large-text">Attention</p>
+                            <p class="small-text">To Detail</p>
                         </div>
                     </div>
                     <div class="about-item">
