--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <h5>Software Developer<span> - Esedu</span></h5>
                     <img src="img/esedu.png" alt="Esedu">
                     <p>
-                        HTML5, CSS3, Bootstrap 5, JavaScript, Git/GitHub, Visual Studio Code
+                        HTML5, CSS3, Bootstrap 5, JavaScript, Canvas API, Visual Studio Code, Git/GitHub, AI
                     </p>
                 </div>
 
@@ -342,6 +342,23 @@
             </p>
 
             <div class="portfolios">
+
+
+                <div class="portfolio-item">
+                    
+                    <div class="image">
+                        <img src="img/worms.png" alt="">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>Canvas API Game - TBA</h3>
+                        <div class="icons">
+                            <a href="#" target="_blank" class="icon">
+                                <i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+
 
                 <div class="portfolio-item">
                     
