--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Use Case Program - TBA</h3>
+                        <h3>Pelekääkkö nää polliisia?</h3>
                         <div class="icons">
-                            <a href="#" target="_blank" class="icon">
+                            <a href="https://jkiimala.github.io/useCase" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
