--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/vote.png" alt="polliisi - Jarno Kiimala">
+                        <img src="img/votepolliisi.png" alt="polliisi - Jarno Kiimala">
 
                     </div>
                     <div class="hover-items">
