--- a/index.html
+++ b/index.html
@@ -343,6 +343,20 @@
 
             <div class="portfolios">
 
+                <div class="portfolio-item">
+                    
+                    <div class="image">
+                        <img src="img/kahvilatutka.png" alt="kahvilatutka.fi - Jarno Kiimala">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>kahvilatutka.fi</h3>
+                        <div class="icons">
+                            <a href="https://jarno.enes.fi" target="_blank" class="icon">
+                                <i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="portfolio-item">
                     
