--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     with operational efficiency, sustainability and corporate responsibility in mind.
                     <p>
                     I have a strong foundation in Adobe CC Software and Graphic Design
-                    and I am a self-taught After Effects 2D animator. At the moment I am designing JavaScript Browser Games.
+                    and I am a self-taught After Effects 2D animator.
                     My recent accomplishments are Python coding, JavaScript, Bootstrap 5 and Knowledge Management.</p>
                     
                     <!--
@@ -338,7 +338,7 @@
                 <h2>My <span>Projects</span><span class="bg-text"></span></h2>
             </div>
             <p class="port-text">
-                Some of the projects that I have worked on over the years.
+                Use Google Chrome for best user experience.
             </p>
 
             <div class="portfolios">
