--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     </h2>
                     
                 <p>
-                    I am specialized in Front-End Web Development,
-                    Digital Media and Problem-Solving Content Creation.
+                    Front-End Web Development |
+                    Digital Designs | Problem-Solving Content Creation
                     
                 </p>
 
@@ -375,7 +375,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>React...Soon</h3>
+                        <h3>STBA</h3>
                         <div class="icons">
                             <a href="#" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
