--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <div class="portfolio-item">
                     
                     <div class="image">
-                        <img src="img/react.png" alt="React - Jarno Kiimala">
+                        <img src="img/vitereact.png" alt="React - Jarno Kiimala">
 
                     </div>
                     <div class="hover-items">
