--- a/index.html
+++ b/index.html
@@ -376,10 +376,10 @@
                     </div>
                     <div class="hover-items">
                         <h3>STBA</h3>
-                        <div class="icons">
+                      <!--  <div class="icons">
                             <a href="#" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
