--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>JavaScript Pole</h3>
+                        <h3>JavaScript Poll</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/useCase" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
