--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                 <div class="left-about">
                     <h4>About me</h4>
                     <p>
-                    I am a Software Developer, 3D modeler and an Industrial Management Engineer with 10+ years of experience
+                    I am a Front-End Web Developer and an Industrial Management Engineer with 10+ years of experience
                     in cross-functional remote projects e.g. (e-commerce, productization, marketing research, networking, web design)
                     with operational efficiency, sustainability and corporate responsibility in mind.
                     <p>
                     I have a strong foundation in Adobe CC Software and Graphic Design
                     and I am a self-taught After Effects 2D animator.
-                    My recent accomplishments are Python coding, JavaScript, Bootstrap 5 and Knowledge Management.</p>
+                    My recent accomplishments are Python coding, JavaScript, Bootstrap 5 and CSS3.</p>
                     
                     <!--
                     <div class="btn-con">
@@ -988,7 +988,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Tornio, Finland
+                                    Finland
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -997,7 +997,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>jarno.kiimala(at)proton.me</span>
+                                    <span>jarno.kiimala(at)gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
