--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">Dozens of</p>
-                            <p class="small-text">Projects Completed</p>
+                            <p class="small-text">Remote Projects</p>
                         </div>
                     </div>
                     <div class="about-item">
